--- a/vk_parser.ipynb
+++ b/vk_parser.ipynb
@@ -148,7 +148,7 @@
     "        self.owner_id = owner_id\n",
     "        self.file = file\n",
     "        self.num_posts = num_posts\n",
-    "        self.token = '7806ea587806ea587806ea58f978762580778067806ea58268ca21e53ad7dd86adab37c'\n",
+    "        self.token = '#######################################################################'\n",
     "        \n",
     "        \n",
     "    def collect_ids(self):\n",
